# v2sort

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README-RU.md  README.md  lists  v2sort.toml  v2sort_example.toml
include/: configgen.hpp  fmt_reports.hpp  geodata.hpp  mkproto.hpp  net.hpp  ports.hpp  urls_configgen.hpp  utils.hpp  v2sort.hpp
src/: configgen.cpp  fmt_reports.cpp  geodata.cpp  main.cpp  mkproto.cpp  net.cpp  urls_configgen.cpp  utils.cpp
